[package]
name = "wadtoolrust"
version = "0.1.0"
authors = ["altro50 <altro50@msn.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crc = "1.8.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"